# Setuptools
# ----------
# This is to be eventually migrated into pyproject.toml
# See https://github.com/pypa/setuptools/issues/1688
# and https://www.python.org/dev/peps/pep-0621/
[metadata]
name = mamdp
author = Eric Langlois
author_email = edl@cs.toronto.edu
version = 1.2.0
description = RL with modified actions
long_description = file: README.md, LICENSE
license = GPLv3
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
include_package_data = True
scripts =
install_requires =
	matplotlib>=3.3.0
	numpy>=1.17.0
	pandas>=1.1.0
	seaborn>=0.10.1
	tabulate>=0.8.7

[options.extras_require]
pretty = tqdm

[options.entry_points]
console_scripts =
	mamdp-eval=mamdp.cli.eval:main
	mamdp-plot-evaluations=mamdp.cli.plot_evaluations:main
	mamdp-plot-policies=mamdp.cli.plot_policies:main
	mamdp-plot-training=mamdp.cli.plot_training:main
	mamdp-print-policies=mamdp.cli.print_policies:main
	mamdp-summarize-policies=mamdp.cli.summarize_policies:main
	mamdp-summary=mamdp.cli.summary:main
	mamdp-train-eval=mamdp.cli.train_eval:main
	mamdp-train=mamdp.cli.train:main

# Other Tools
# -----------

[flake8]
application-import-names=mamdp
import-order-style=google
select=C,E,F,W,B,B950
# E501 - strict line length. Instead use B950 allows exceeding by 10%
# W503 - line break before binary operator. PEP8 recommends the opposite now.
# E203 - whitespace before ':'. False positive bug in flake8
ignore=E501,W503,E203

[isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
skip_glob=*/third_party/*
known_third_party=matplotlib,numpy,pandas,pytest,scipy,seaborn,setuptools,tabulate

[mypy]
ignore_missing_imports=True

[tool:pytest]
# Don't show deprecation warning for dependencies
filterwarnings =
	ignore::DeprecationWarning
	default::DeprecationWarning:__main__
	default::DeprecationWarning:mamdp
	ignore::PendingDeprecationWarning
	default::PendingDeprecationWarning:__main__
	default::PendingDeprecationWarning:mamdp
